--- a/visualize.html
+++ b/visualize.html
@@ -4,7 +4,7 @@
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 <script>
-var MAP_FILE = "derp_walls.json"
+var MAP_FILE = "derp_walls2.json"
 var matrix = null
 var gObjects = []
 var size = 6
@@ -144,6 +144,11 @@ heart.preload = function() {
 	heart.graphics.newImage("va2001.png", function(r){images["art/walls/va2001"] = r})
 	heart.graphics.newImage("vb4003.png", function(r){images["art/walls/vb4003"] = r})
 	heart.graphics.newImage("vcn3000.png", function(r){images["art/walls/vcn3000"] = r})
+
+	heart.graphics.newImage("fnc1000.png", function(r){images["art/walls/fnc1000"] = r})
+	heart.graphics.newImage("fns1000.png", function(r){images["art/walls/fns1000"] = r})
+	heart.graphics.newImage("fns1002.png", function(r){images["art/walls/fns1002"] = r})
+	heart.graphics.newImage("fns2000.png", function(r){images["art/walls/fns2000"] = r})
 }
 
 heart.load = function() {
@@ -194,8 +199,14 @@ heart.draw = function() {
 		//console.log(obj.position.x + ", " + obj.position.y)
 
 		//if(obj.art)
+
+		var offsetX = images[obj.art].getWidth() / 2;
 		var offsetY = images[obj.art].getHeight()
-		heart.graphics.draw(images[obj.art], scr.x - cameraX, scr.y - offsetY - cameraY)
+		if(obj.art == "art/walls/fns1000")
+			offsetX -= 8;
+		if(obj.art == "art/walls/fns1002" || obj.art == "art/walls/fns1000")
+			offsetY -= 12;
+		heart.graphics.draw(images[obj.art], scr.x - offsetX - cameraX, scr.y - offsetY - cameraY)
 
 		if(obj.position.x == mouseHex.x && obj.position.y == mouseHex.y)
 			heart.graphics.print("tile: " + obj.art, 5, 30)
