--- a/visualize.html
+++ b/visualize.html
@@ -4,7 +4,7 @@
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 <script>
-var MAP_FILE = "derp_arches.json"
+var MAP_FILE = "derp_deathclaw.json"
 var matrix = null
 var gObjects = []
 var size = 6
@@ -169,6 +169,8 @@ heart.preload = function() {
 	heart.graphics.newImage("temple34.png", function(r){images["art/walls/temple34"] = r})
 	heart.graphics.newImage("temple35.png", function(r){images["art/walls/temple35"] = r})
 	heart.graphics.newImage("temple36.png", function(r){images["art/walls/temple36"] = r})
+
+	heart.graphics.newImage("maclawaa.png", function(r){images["art/critters/maclawaa"] = r})
 }
 
 heart.load = function() {
