--- a/visualize.html
+++ b/visualize.html
@@ -4,7 +4,7 @@
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 <script>
-var MAP_FILE = "derp_deathclaw.json"
+var MAP_FILE = "V13ENT.json"
 var matrix = null
 var gObjects = []
 var size = 6
@@ -93,6 +93,9 @@ heart.preload = function() {
 	function load(file) {
 		heart.graphics.newImage("tiles/"+file, function(r) { images[file] = r; })
 	}
+	function loadObj(file) {
+		heart.graphics.newImage(file+".png", function(r) { images[file] = r; })
+	}
 	load("edg6009.png")
 	load("edg1001.png")
 	load("edg4003.png")
@@ -152,7 +155,123 @@ heart.preload = function() {
 	load("cav4003.png")
 	load("cav1002.png")
 
+	// objects
+
+	loadObj("art/walls/vcn6000")
+	loadObj("art/scenery/weed01")
+	loadObj("art/scenery/weed03")
+	loadObj("art/scenery/weed02")
+	loadObj("art/scenery/weed04")
+	loadObj("art/scenery/weed07")
+	loadObj("art/scenery/doorcomp")
+	loadObj("art/misc/exitgrd8")
+	loadObj("art/scenery/rock01")
+	loadObj("art/walls/ca028")
+	loadObj("art/scenery/rock03")
+	loadObj("art/scenery/rock02")
+	loadObj("art/scenery/rock05")
+	loadObj("art/scenery/rock04")
+	loadObj("art/scenery/rock06")
+	loadObj("art/walls/vb3001")
+	loadObj("art/walls/vb3000")
+	loadObj("art/walls/ca023")
+	loadObj("art/walls/ca022")
+	loadObj("art/walls/ca025")
+	loadObj("art/walls/ca024")
+	loadObj("art/walls/ca027")
+	loadObj("art/walls/ca026")
+	loadObj("art/scenery/bone04")
+	loadObj("art/walls/ca036")
+	loadObj("art/walls/ca037")
+	loadObj("art/walls/ca032")
+	loadObj("art/walls/ca038")
+	loadObj("art/walls/ca039")
+	loadObj("art/scenery/weed23")
+	loadObj("art/scenery/weed22")
+	loadObj("art/scenery/weed21")
+	loadObj("art/scenery/weed20")
+	loadObj("art/scenery/weed26")
+	loadObj("art/scenery/weed25")
+	loadObj("art/scenery/weed24")
+	loadObj("art/walls/vcn4000")
+	loadObj("art/scenery/v13secur")
+	loadObj("art/walls/ca043")
+	loadObj("art/walls/ca042")
+	loadObj("art/walls/ca041")
+	loadObj("art/walls/ca040")
+	loadObj("art/walls/ca047")
+	loadObj("art/walls/ca046")
+	loadObj("art/walls/ca045")
+	loadObj("art/walls/ca044")
+	loadObj("art/walls/ca048")
+	loadObj("art/walls/vb4000")
+	loadObj("art/walls/vb4003")
+	loadObj("art/walls/block")
+	loadObj("art/walls/ca050")
+	loadObj("art/walls/ca053")
+	loadObj("art/walls/ca054")
+	loadObj("art/walls/ca055")
+	loadObj("art/walls/ca056")
+	loadObj("art/walls/ca057")
+	loadObj("art/walls/ca058")
+	loadObj("art/walls/ca059")
+	loadObj("art/walls/ca060")
+	loadObj("art/walls/ca063")
+	loadObj("art/walls/ca069")
+	loadObj("art/walls/ca068")
+	loadObj("art/walls/ca065")
+	loadObj("art/walls/ca064")
+	loadObj("art/walls/ca067")
+	loadObj("art/walls/ca066")
+	loadObj("art/walls/ca061")
+	loadObj("art/scenery/cstalag2")
+	loadObj("art/scenery/cstalag1")
+	loadObj("art/walls/ca062")
+	loadObj("art/scenery/cvcolum2")
+	loadObj("art/scenery/cvcolum1")
+	loadObj("art/walls/va5001")
+	loadObj("art/walls/ca021")
+	loadObj("art/walls/ca020")
+	loadObj("art/walls/ca072")
+	loadObj("art/walls/ca070")
+	loadObj("art/walls/ca071")
+	loadObj("art/misc/ext2grd8")
+	loadObj("art/misc/ext2grd5")
+	loadObj("art/misc/ext2grd3")
+	loadObj("art/misc/ext2grd1")
+	loadObj("art/scenery/v13secr3")
+	loadObj("art/scenery/v13secr2")
+	loadObj("art/misc/block")
+	loadObj("art/walls/vcn3000")
+	loadObj("art/walls/ca009")
+	loadObj("art/walls/ca008")
+	loadObj("art/walls/ca007")
+	loadObj("art/walls/ca006")
+	loadObj("art/walls/ca005")
+	loadObj("art/walls/ca004")
+	loadObj("art/walls/ca003")
+	loadObj("art/walls/ca002")
+	loadObj("art/scenery/weed18")
+	loadObj("art/scenery/weed19")
+	loadObj("art/scenery/weed12")
+	loadObj("art/scenery/weed13")
+	loadObj("art/scenery/weed11")
+	loadObj("art/scenery/block")
+	loadObj("art/scenery/bone01")
+	loadObj("art/scenery/bone02")
+	loadObj("art/walls/ca018")
+	loadObj("art/walls/ca019")
+	loadObj("art/walls/ca014")
+	loadObj("art/walls/ca015")
+	loadObj("art/walls/ca016")
+	loadObj("art/walls/ca017")
+	loadObj("art/walls/ca010")
+	loadObj("art/walls/ca011")
+	loadObj("art/walls/ca012")
+	loadObj("art/walls/ca013")
+
 	heart.graphics.newImage("hex_outline.png", function(r) { hexOverlay = r })
+/*
 	heart.graphics.newImage("vtx000.png", function(r) { images["art/walls/vtx000"] = r })
 
 	heart.graphics.newImage("va1000.png", function(r){images["art/walls/va1000"] = r})
@@ -169,7 +288,7 @@ heart.preload = function() {
 	heart.graphics.newImage("temple34.png", function(r){images["art/walls/temple34"] = r})
 	heart.graphics.newImage("temple35.png", function(r){images["art/walls/temple35"] = r})
 	heart.graphics.newImage("temple36.png", function(r){images["art/walls/temple36"] = r})
-
+*/
 	heart.graphics.newImage("maclawaa.png", function(r){images["art/critters/maclawaa"] = r})
 }
 
